# nucleo-l432kc-quickstart

./: Cargo.toml  README.md  openocd.cfg
.github/workflows/: ci.yml
src/: main.rs
